--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <vaadin.version>8.0.0.alpha2</vaadin.version>
         <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-        <sonar.host.url>http://52.38.255.224:9000/sonar/</sonar.host.url>
+        <sonar.host.url>http://52.38.255.224:9000/sonar</sonar.host.url>
 	<!-- <sonar.login>38e995395d3db701d34e5431b2376f6b56755ff3</sonar.login> -->
         <!-- <sonar.password>admin</sonar.password> -->
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
